dropshot/tests/fail/bad_trait_only12.stderr
error: expected a string, but found `123`
  --> tests/fail/bad_trait_only12.rs:10:41
   |
10 | #[dropshot::api_description { context = 123 }]
   |                                         ^^^
